--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 <body>
 <div id="main">
 <div id="header">
+<!-- Begin nav -->
 <ul id="nav">
     <li><a href="">Home</a></li>
     <li><a href="">Band</a></li>
     <li><a href="">Tour</a></li>
     <li><a href="">Contact</a></li>
     <li>
-        <a href="">More</a>
+        <a href="">
+            More
+            <i class="nav-arrow-down ti-angle-down"></i>
+        </a>
         <ul class="subnav">
             <li><a href="">Merchandise</a></li>
             <li><a href="">Extras</a></li>
@@ -25,6 +29,12 @@
         </ul>
     </li>
 </ul>
+<!-- End nav -->
+<!-- Begin search button -->
+<div class="search-btn">
+    <i class="search-icon ti-search"></i>
+</div>
+<!-- End search button -->
 </div>
 <div id="slider">
 
