--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 <!-- End search button -->
 </div>
 <div id="slider">
-
+<div class="text-content">
+    <h2 class="text-heading">Los Angeles</h2>
+    <div class="text-description">We had the best time playing at Venice Beach!</div>
+</div>
 </div>
 <div id="content">
 
