tour tickets css

--- a/index.html
+++ b/index.html
@@ -69,9 +69,13 @@
 <!-- Tour section -->
 <div class="tour-section">
     <div class="content-section">
-        <h2 class="section-heading">TOUR DATES</h2>
-        <p class="section-sub-heading">Remember to book your tickets!</p>
-        
+        <h2 class="section-heading text-white">TOUR DATES</h2>
+        <p class="section-sub-heading text-white">Remember to book your tickets!</p>
+        <ul class="tickets-list">
+            <li>September <span class="sould-out">Sould out</span></li>
+            <li>October <span class="sould-out">Sould out</span></li>
+            <li>November <span class="quantity">3</span></li>
+        </ul>
     </div>
 </div>
 <!-- Contact section -->
