Row columns layout

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <!-- End search button -->
 </div>
 <div id="slider">
+
 <div class="text-content">
     <h2 class="text-heading">Los Angeles</h2>
     <div class="text-description">We had the best time playing at Venice Beach!</div>
@@ -44,80 +45,79 @@
 </div>
 <div id="content">
     <!-- About section -->
-<div class="content-section">
-    <h2 class="section-heading">THE BAND</h2>
-    <p class="section-sub-heading">We love music</p>
-    <p class="about-text">
-        We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
-    <div class="member-list">
-        <div class="member-item">
-            <p class="member-name">Name</p>
-            <img src="./assets/img/band/member1.jpg" alt="Name" class="member-img">
-        </div>
-        <div class="member-item">
-            <p class="member-name">Name</p>
-            <img src="./assets/img/band/member1.jpg" alt="Name" class="member-img">
-        </div>
-        <div class="member-item">
-            <p class="member-name">Name</p>
-            <img src="./assets/img/band/member1.jpg" alt="Name" class="member-img">
-        </div>
-        <div class="clear"></div>
-    </div>
-</div>
-<!-- Tour section -->
-<div class="tour-section">
     <div class="content-section">
-        <h2 class="section-heading text-white">TOUR DATES</h2>
-        <p class="section-sub-heading text-white">Remember to book your tickets!</p>
-        <!-- Ticket -->
-        <ul class="tickets-list">
-            <li>September <span class="sould-out">Sould out</span></li>
-            <li>October <span class="sould-out">Sould out</span></li>
-            <li>November <span class="quantity">3</span></li>
-        </ul>
-        <!-- Places -->
-        <div class="places-list">
-            <div class="place-item">
-                <img src="./assets/img/places/place1.jpg" alt="New York" class="place-img">
-                <div class="place-body">
-                    <h3 class="place-heading">New York</h3>
-                    <p class="place-time">Fri 27 Nov 2016</p>
-                    <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                    <a href="#" class="place-buy-btn">Buy Tickets</a>
-                </div>
+        <h2 class="section-heading">THE BAND</h2>
+        <p class="section-sub-heading">We love music</p>
+        <p class="about-text">
+            We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+        <div class="row member-list">
+            <div class="col col-third text-center">
+                <p class="member-name">Name</p>
+                <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
             </div>
-            <div class="place-item">
-                <img src="./assets/img/places/place2.jpg" alt="New York" class="place-img">
-                <div class="place-body">
-                    <h3 class="place-heading">Paris</h3>
-                    <p class="place-time">Fri 28 Nov 2016</p>
-                    <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                    <a href="#" class="place-buy-btn">Buy Tickets</a>
-                </div>
+            <div class="col col-third text-center">
+                <p class="member-name">Name</p>
+                <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
             </div>
-            <div class="place-item">
-                <img src="./assets/img/places/place3.jpg" alt="New York" class="place-img">
-                <div class="place-body">
-                    <h3 class="place-heading">San Francisco</h3>
-                    <p class="place-time">Fri 29 Nov 2016</p>
-                    <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                    <a href="#" class="place-buy-btn">Buy Tickets</a>
-                </div>
+            <div class="col col-third text-center">
+                <p class="member-name">Name</p>
+                <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
             </div>
             <div class="clear"></div>
         </div>
     </div>
-</div>
-<!-- Contact section -->
-<div class="content-section">
-    <h2 class="section-heading">CONTACT</h2>
-    <p class="section-sub-heading">Fan? Drop a note!</p>
-</div>
+    <!-- Tour section -->
+    <div class="tour-section">
+        <div class="content-section">
+            <!-- Ticket -->
+            <h2 class="section-heading text-white">TOUR DATES</h2>
+            <p class="section-sub-heading text-white">Remember to book your tickets!</p>
+            <ul class="tickets-list">
+                <li>September<span class="sold-out">Sold out</span></li>
+                <li>October<span class="sold-out">Sold out</span></li>
+                <li>November3<span class="quantity">3</span></li>
+            </ul>
+            <!-- Places -->
+            <div class="places-list">
+                <div class="col col-third">
+                    <img src="/assets/img/places/place1.jpg" alt="New York" class="place-img">
+                    <div class="place-body">
+                        <h3 class="place-heading">New York</h3>
+                        <p class="place-time">Fri 27 Nov 2016</p>
+                        <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                        <a href="#" class="place-buy-btn">Buy Tickets</a>
+                    </div>
+                </div>
+                <div class="col col-third">
+                    <img src="/assets/img/places/place2.jpg" alt="New York" class="place-img">
+                    <div class="place-body">
+                        <h3 class="place-heading">New York</h3>
+                        <p class="place-time">Fri 28 Nov 2016</p>
+                        <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                        <a href="#" class="place-buy-btn">Buy Tickets</a>
+                    </div>
+                </div>
+                <div class="col col-third">
+                    <img src="/assets/img/places/place3.jpg" alt="New York" class="place-img">
+                    <div class="place-body">
+                        <h3 class="place-heading">New York</h3>
+                        <p class="place-desc">Fri 29 Nov 2016</p>
+                        <p class="place-time">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                        <a href="#" class="place-buy-btn">Buy Tickets</a>
+                    </div>
+                </div>
+                <div class="clear"></div>
+            </div>
+        </div>
+    </div>
+    <!-- Contact section -->
+    <div class="content-section">
+        <h2 class="section-heading">CONTACT</h2>
+        <p class="section-sub-heading">Fan? Drop a note!</p>
+    </div>
 </div>
 <div id="footer">
-
 </div>
 </div>
 </body>
