Contact form CSS

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
                 <p class="member-name">Name</p>
                 <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
             </div>
-            <div class="clear"></div>
         </div>
     </div>
     <!-- Tour section -->
@@ -79,7 +78,7 @@
                 <li>November3<span class="quantity">3</span></li>
             </ul>
             <!-- Places -->
-            <div class="places-list">
+            <div class="row places-list">
                 <div class="col col-third">
                     <img src="/assets/img/places/place1.jpg" alt="New York" class="place-img">
                     <div class="place-body">
@@ -107,7 +106,6 @@
                         <a href="#" class="place-buy-btn">Buy Tickets</a>
                     </div>
                 </div>
-                <div class="clear"></div>
             </div>
         </div>
     </div>
@@ -115,6 +113,32 @@
     <div class="content-section">
         <h2 class="section-heading">CONTACT</h2>
         <p class="section-sub-heading">Fan? Drop a note!</p>
+
+        <div class="row contact-content">
+            <div class="col col-half contact-info">
+                <p><i class="ti-location-pin"></i>Chicago, US</p>
+                <p><i class="ti-mobile"></i>Phone: +00 151515</p>
+                <p><i class="ti-email"></i>Email: mail@mail.com</p>
+            </div>
+            <div class="col col-half contact-form">
+                <form action="">
+                    <div class="row">
+                        <div class="col col-half">
+                            <input type="text" name="" placeholder="Name" required id="" class="form-control">
+                        </div>
+                        <div class="col col-half">
+                            <input type="email" name="" placeholder="Email" required id="" class="form-control">
+                        </div>
+                    </div>
+                    <div class="row mt-8">
+                        <div class="col col-full">
+                            <input type="text" name="" placeholder="Message" required id="" class="form-control">
+                        </div>
+                    </div>
+                    <input class="form-submit-btn mt-16" type="submit" value="SEND">
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 <div id="footer">
