--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <h3 class="place-heading">New York</h3>
                         <p class="place-time">Fri 27 Nov 2016</p>
                         <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                        <a href="#" class="place-buy-btn">Buy Tickets</a>
+                        <a href="#" class="btn">Buy Tickets</a>
                     </div>
                 </div>
                 <div class="col col-third">
@@ -94,22 +94,22 @@
                         <h3 class="place-heading">New York</h3>
                         <p class="place-time">Fri 28 Nov 2016</p>
                         <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                        <a href="#" class="place-buy-btn">Buy Tickets</a>
+                        <a href="#" class="btn">Buy Tickets</a>
                     </div>
                 </div>
                 <div class="col col-third">
                     <img src="/assets/img/places/place3.jpg" alt="New York" class="place-img">
                     <div class="place-body">
                         <h3 class="place-heading">New York</h3>
-                        <p class="place-desc">Fri 29 Nov 2016</p>
-                        <p class="place-time">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                        <a href="#" class="place-buy-btn">Buy Tickets</a>
+                        <p class="place-time">Fri 29 Nov 2016</p>
+                        <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                        <a href="#" class="btn">Buy Tickets</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Contact section -->
+    <!-- Begin: Contact section -->
     <div class="content-section">
         <h2 class="section-heading">CONTACT</h2>
         <p class="section-sub-heading">Fan? Drop a note!</p>
@@ -135,13 +135,27 @@
                             <input type="text" name="" placeholder="Message" required id="" class="form-control">
                         </div>
                     </div>
-                    <input class="form-submit-btn mt-16" type="submit" value="SEND">
+                    <input class="btn pull-right mt-16" type="submit" value="SEND">
                 </form>
             </div>
         </div>
     </div>
+    <!-- End: contact section -->
+
+    <div class="map-section">
+        <img src="./assets/img/map.jpg" alt="Map">
+    </div>
 </div>
 <div id="footer">
+    <div class="socials-list">
+        <a href=""><i class="ti-facebook"></i></a>
+        <a href=""><i class="ti-instagram"></i></a>
+        <a href=""><i class="ti-youtube"></i></a>
+        <a href=""><i class="ti-pinterest"></i></a>
+        <a href=""><i class="ti-twitter"></i></a>
+        <a href=""><i class="ti-linkedin"></i></a>
+    </div>
+    <p class="copyright">Powered by <a href="">w3.css</a></p>
 </div>
 </div>
 </body>
