--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The band</title>
+    <link rel="icon" href="https://w7.pngwing.com/pngs/62/631/png-transparent-yellow-star-computer-icons-favicon-avatar-music-yellow-star-icon-angle-triangle-website.png" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
 </head>
@@ -13,19 +14,19 @@
 <div id="header">
 <!-- Begin nav -->
 <ul id="nav">
-    <li><a href="">Home</a></li>
-    <li><a href="">Band</a></li>
-    <li><a href="">Tour</a></li>
-    <li><a href="">Contact</a></li>
+    <li><a href="#">Home</a></li>
+    <li><a href="#band">Band</a></li>
+    <li><a href="#tour">Tour</a></li>
+    <li><a href="#contact">Contact</a></li>
     <li>
         <a href="">
             More
             <i class="nav-arrow-down ti-angle-down"></i>
         </a>
         <ul class="subnav">
-            <li><a href="">Merchandise</a></li>
-            <li><a href="">Extras</a></li>
-            <li><a href="">Media</a></li>
+            <li><a href="#">Merchandise</a></li>
+            <li><a href="#">Extras</a></li>
+            <li><a href="#">Media</a></li>
         </ul>
     </li>
 </ul>
@@ -45,7 +46,7 @@
 </div>
 <div id="content">
     <!-- About section -->
-    <div class="content-section">
+    <div id="band" class="content-section">
         <h2 class="section-heading">THE BAND</h2>
         <p class="section-sub-heading">We love music</p>
         <p class="about-text">
@@ -68,7 +69,7 @@
     </div>
     <!-- Tour section -->
     <div class="tour-section">
-        <div class="content-section">
+        <div id="tour" class="content-section">
             <!-- Ticket -->
             <h2 class="section-heading text-white">TOUR DATES</h2>
             <p class="section-sub-heading text-white">Remember to book your tickets!</p>
@@ -110,7 +111,7 @@
         </div>
     </div>
     <!-- Begin: Contact section -->
-    <div class="content-section">
+    <div id="contact" class="content-section">
         <h2 class="section-heading">CONTACT</h2>
         <p class="section-sub-heading">Fan? Drop a note!</p>
 
