--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>The band</title>
     <link rel="icon" href="https://w7.pngwing.com/pngs/62/631/png-transparent-yellow-star-computer-icons-favicon-avatar-music-yellow-star-icon-angle-triangle-website.png" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
     <li><a href="#tour">Tour</a></li>
     <li><a href="#contact">Contact</a></li>
     <li>
-        <a href="">
+        <a href="#">
             More
             <i class="nav-arrow-down ti-angle-down"></i>
         </a>
@@ -34,6 +35,9 @@
 <!-- Begin search button -->
 <div class="search-btn">
     <i class="search-icon ti-search"></i>
+</div>
+<div id="mobile-menu" class="mobile-menu-btn">
+    <i class="menu-icon ti-menu"></i>
 </div>
 <!-- End search button -->
 </div>
@@ -159,5 +163,29 @@
     <p class="copyright">Powered by <a href="">w3.css</a></p>
 </div>
 </div>
+<script>
+    var header = document.getElementById('header');
+    var mobileMenu = document.getElementById('mobile-menu');
+    var headerHeight = header.clientHeight;
+    mobileMenu.onclick =  function() {
+        // Đóng mở mobile menu
+        var isClose = header.clientHeight === headerHeight;
+        if(isClose) {
+            header.style.height = 'auto';
+        } else {
+            header.style.height = null;
+        }
+
+        // Tự động đóng khi chọn menu
+        var menuItems = document.querySelectorAll('#nav li a[href*="#"]');
+        for(var i=0; i<menuItems.length; i++){
+            var menuItem = menuItems[i];
+            
+            menuItem.onclick = function () {
+                header.style.height = null;
+            }
+        }
+    }
+</script>
 </body>
 </html>
