--- a/index.html
+++ b/index.html
@@ -1,191 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The band</title>
-    <link rel="icon" href="https://w7.pngwing.com/pngs/62/631/png-transparent-yellow-star-computer-icons-favicon-avatar-music-yellow-star-icon-angle-triangle-website.png" type="image/x-icon" />
+    <link rel="icon"
+        href="https://w7.pngwing.com/pngs/62/631/png-transparent-yellow-star-computer-icons-favicon-avatar-music-yellow-star-icon-angle-triangle-website.png"
+        type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
 </head>
+
 <body>
-<div id="main">
-<div id="header">
-<!-- Begin nav -->
-<ul id="nav">
-    <li><a href="#">Home</a></li>
-    <li><a href="#band">Band</a></li>
-    <li><a href="#tour">Tour</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li>
-        <a href="#">
-            More
-            <i class="nav-arrow-down ti-angle-down"></i>
-        </a>
-        <ul class="subnav">
-            <li><a href="#">Merchandise</a></li>
-            <li><a href="#">Extras</a></li>
-            <li><a href="#">Media</a></li>
-        </ul>
-    </li>
-</ul>
-<!-- End nav -->
-<!-- Begin search button -->
-<div class="search-btn">
-    <i class="search-icon ti-search"></i>
-</div>
-<div id="mobile-menu" class="mobile-menu-btn">
-    <i class="menu-icon ti-menu"></i>
-</div>
-<!-- End search button -->
-</div>
-<div id="slider">
-
-<div class="text-content">
-    <h2 class="text-heading">Los Angeles</h2>
-    <div class="text-description">We had the best time playing at Venice Beach!</div>
-</div>
-</div>
-<div id="content">
-    <!-- About section -->
-    <div id="band" class="content-section">
-        <h2 class="section-heading">THE BAND</h2>
-        <p class="section-sub-heading">We love music</p>
-        <p class="about-text">
-            We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </p>
-        <div class="row member-list">
-            <div class="col col-third text-center">
-                <p class="member-name">Name</p>
-                <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
-            </div>
-            <div class="col col-third text-center">
-                <p class="member-name">Name</p>
-                <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
-            </div>
-            <div class="col col-third text-center">
-                <p class="member-name">Name</p>
-                <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
-            </div>
-        </div>
-    </div>
-    <!-- Tour section -->
-    <div class="tour-section">
-        <div id="tour" class="content-section">
-            <!-- Ticket -->
-            <h2 class="section-heading text-white">TOUR DATES</h2>
-            <p class="section-sub-heading text-white">Remember to book your tickets!</p>
-            <ul class="tickets-list">
-                <li>September<span class="sold-out">Sold out</span></li>
-                <li>October<span class="sold-out">Sold out</span></li>
-                <li>November3<span class="quantity">3</span></li>
+    <div id="main">
+        <div id="header">
+            <!-- Begin nav -->
+            <ul id="nav">
+                <li><a href="#">Home</a></li>
+                <li><a href="#band">Band</a></li>
+                <li><a href="#tour">Tour</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li>
+                    <a href="#">
+                        More
+                        <i class="nav-arrow-down ti-angle-down"></i>
+                    </a>
+                    <ul class="subnav">
+                        <li><a href="#">Merchandise</a></li>
+                        <li><a href="#">Extras</a></li>
+                        <li><a href="#">Media</a></li>
+                    </ul>
+                </li>
             </ul>
-            <!-- Places -->
-            <div class="row places-list">
-                <div class="col col-third">
-                    <img src="/assets/img/places/place1.jpg" alt="New York" class="place-img">
-                    <div class="place-body">
-                        <h3 class="place-heading">New York</h3>
-                        <p class="place-time">Fri 27 Nov 2016</p>
-                        <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                        <a href="#" class="btn">Buy Tickets</a>
-                    </div>
-                </div>
-                <div class="col col-third">
-                    <img src="/assets/img/places/place2.jpg" alt="New York" class="place-img">
-                    <div class="place-body">
-                        <h3 class="place-heading">New York</h3>
-                        <p class="place-time">Fri 28 Nov 2016</p>
-                        <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                        <a href="#" class="btn">Buy Tickets</a>
-                    </div>
-                </div>
-                <div class="col col-third">
-                    <img src="/assets/img/places/place3.jpg" alt="New York" class="place-img">
-                    <div class="place-body">
-                        <h3 class="place-heading">New York</h3>
-                        <p class="place-time">Fri 29 Nov 2016</p>
-                        <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                        <a href="#" class="btn">Buy Tickets</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Begin: Contact section -->
-    <div id="contact" class="content-section">
-        <h2 class="section-heading">CONTACT</h2>
-        <p class="section-sub-heading">Fan? Drop a note!</p>
+            <!-- End nav -->
 
-        <div class="row contact-content">
-            <div class="col col-half contact-info">
-                <p><i class="ti-location-pin"></i>Chicago, US</p>
-                <p><i class="ti-mobile"></i>Phone: +00 151515</p>
-                <p><i class="ti-email"></i>Email: mail@mail.com</p>
+            <!-- Mobile menu button -->
+            <div id="mobile-menu" class="mobile-menu-btn">
+                <i class="menu-icon ti-menu"></i>
             </div>
-            <div class="col col-half contact-form">
-                <form action="">
-                    <div class="row">
-                        <div class="col col-half">
-                            <input type="text" name="" placeholder="Name" required id="" class="form-control">
-                        </div>
-                        <div class="col col-half">
-                            <input type="email" name="" placeholder="Email" required id="" class="form-control">
-                        </div>
-                    </div>
-                    <div class="row mt-8">
-                        <div class="col col-full">
-                            <input type="text" name="" placeholder="Message" required id="" class="form-control">
-                        </div>
-                    </div>
-                    <input class="btn pull-right mt-16" type="submit" value="SEND">
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- End: contact section -->
-
-    <div class="map-section">
-        <img src="./assets/img/map.jpg" alt="Map">
-    </div>
-</div>
-<div id="footer">
-    <div class="socials-list">
-        <a href=""><i class="ti-facebook"></i></a>
-        <a href=""><i class="ti-instagram"></i></a>
-        <a href=""><i class="ti-youtube"></i></a>
-        <a href=""><i class="ti-pinterest"></i></a>
-        <a href=""><i class="ti-twitter"></i></a>
-        <a href=""><i class="ti-linkedin"></i></a>
-    </div>
-    <p class="copyright">Powered by <a href="">w3.css</a></p>
-</div>
-</div>
-<script>
-    var header = document.getElementById('header');
-    var mobileMenu = document.getElementById('mobile-menu');
-    var headerHeight = header.clientHeight;
-    mobileMenu.onclick =  function() {
-        // Đóng mở mobile menu
-        var isClose = header.clientHeight === headerHeight;
-        if(isClose) {
-            header.style.height = 'auto';
-        } else {
-            header.style.height = null;
-        }
-
-        // Tự động đóng khi chọn menu
-        var menuItems = document.querySelectorAll('#nav li a[href*="#"]');
-        for(var i=0; i<menuItems.length; i++){
-            var menuItem = menuItems[i];
             
-            menuItem.onclick = function () {
+            <!-- Search button -->
+            <div class="search-btn">
+                <i class="search-icon ti-search"></i>
+            </div>
+        </div>
+        <div id="slider">
+
+            <div class="text-content">
+                <h2 class="text-heading">Los Angeles</h2>
+                <div class="text-description">We had the best time playing at Venice Beach!</div>
+            </div>
+        </div>
+        <div id="content">
+            <!-- About section -->
+            <div id="band" class="content-section">
+                <h2 class="section-heading">THE BAND</h2>
+                <p class="section-sub-heading">We love music</p>
+                <p class="about-text">
+                    We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.
+                </p>
+                <div class="row member-list">
+                    <div class="col col-third text-center">
+                        <p class="member-name">Name</p>
+                        <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
+                    </div>
+                    <div class="col col-third text-center">
+                        <p class="member-name">Name</p>
+                        <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
+                    </div>
+                    <div class="col col-third text-center">
+                        <p class="member-name">Name</p>
+                        <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
+                    </div>
+                </div>
+            </div>
+            <!-- Tour section -->
+            <div class="tour-section">
+                <div id="tour" class="content-section">
+                    <!-- Ticket -->
+                    <h2 class="section-heading text-white">TOUR DATES</h2>
+                    <p class="section-sub-heading text-white">Remember to book your tickets!</p>
+                    <ul class="tickets-list">
+                        <li>September<span class="sold-out">Sold out</span></li>
+                        <li>October<span class="sold-out">Sold out</span></li>
+                        <li>November3<span class="quantity">3</span></li>
+                    </ul>
+                    <!-- Places -->
+                    <div class="row places-list">
+                        <div class="col col-third">
+                            <img src="/assets/img/places/place1.jpg" alt="New York" class="place-img">
+                            <div class="place-body">
+                                <h3 class="place-heading">New York</h3>
+                                <p class="place-time">Fri 27 Nov 2016</p>
+                                <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <a href="#" class="btn">Buy Tickets</a>
+                            </div>
+                        </div>
+                        <div class="col col-third">
+                            <img src="/assets/img/places/place2.jpg" alt="New York" class="place-img">
+                            <div class="place-body">
+                                <h3 class="place-heading">New York</h3>
+                                <p class="place-time">Fri 28 Nov 2016</p>
+                                <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <a href="#" class="btn">Buy Tickets</a>
+                            </div>
+                        </div>
+                        <div class="col col-third">
+                            <img src="/assets/img/places/place3.jpg" alt="New York" class="place-img">
+                            <div class="place-body">
+                                <h3 class="place-heading">New York</h3>
+                                <p class="place-time">Fri 29 Nov 2016</p>
+                                <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <a href="#" class="btn">Buy Tickets</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Begin: Contact section -->
+            <div id="contact" class="content-section">
+                <h2 class="section-heading">CONTACT</h2>
+                <p class="section-sub-heading">Fan? Drop a note!</p>
+
+                <div class="row contact-content">
+                    <div class="col col-half contact-info">
+                        <p><i class="ti-location-pin"></i>Chicago, US</p>
+                        <p><i class="ti-mobile"></i>Phone: +00 151515</p>
+                        <p><i class="ti-email"></i>Email: mail@mail.com</p>
+                    </div>
+                    <div class="col col-half contact-form">
+                        <form action="">
+                            <div class="row">
+                                <div class="col col-half">
+                                    <input type="text" name="" placeholder="Name" required id="" class="form-control">
+                                </div>
+                                <div class="col col-half">
+                                    <input type="email" name="" placeholder="Email" required id="" class="form-control">
+                                </div>
+                            </div>
+                            <div class="row mt-8">
+                                <div class="col col-full">
+                                    <input type="text" name="" placeholder="Message" required id=""
+                                        class="form-control">
+                                </div>
+                            </div>
+                            <input class="btn pull-right mt-16" type="submit" value="SEND">
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- End: contact section -->
+
+            <div class="map-section">
+                <img src="./assets/img/map.jpg" alt="Map">
+            </div>
+        </div>
+        <div id="footer">
+            <div class="socials-list">
+                <a href=""><i class="ti-facebook"></i></a>
+                <a href=""><i class="ti-instagram"></i></a>
+                <a href=""><i class="ti-youtube"></i></a>
+                <a href=""><i class="ti-pinterest"></i></a>
+                <a href=""><i class="ti-twitter"></i></a>
+                <a href=""><i class="ti-linkedin"></i></a>
+            </div>
+            <p class="copyright">Powered by <a href="">w3.css</a></p>
+        </div>
+    </div>
+    <script>
+        var header = document.getElementById('header');
+        var mobileMenu = document.getElementById('mobile-menu');
+        var headerHeight = header.clientHeight;
+        mobileMenu.onclick = function () {
+            // Đóng mở mobile menu
+            var isClose = header.clientHeight === headerHeight;
+            if (isClose) {
+                header.style.height = 'auto';
+            } else {
                 header.style.height = null;
             }
+
+            // Tự động đóng khi chọn menu
+            var menuItems = document.querySelectorAll('#nav li a[href*="#"]');
+            for (var i = 0; i < menuItems.length; i++) {
+                var menuItem = menuItems[i];
+
+                menuItem.onclick = function () {
+                    header.style.height = null;
+                }
+            }
         }
-    }
-</script>
+    </script>
 </body>
+
 </html>
