--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div id="mobile-menu" class="mobile-menu-btn">
                 <i class="menu-icon ti-menu"></i>
             </div>
-            
+
             <!-- Search button -->
             <div class="search-btn">
                 <i class="search-icon ti-search"></i>
@@ -196,7 +196,12 @@
                 var menuItem = menuItems[i];
 
                 menuItem.onclick = function () {
-                    header.style.height = null;
+                    var isParentMenu = this.nextElementSibling && this.nextElementSibling.classList.contains('subnav');
+                    if (isParentMenu) {
+                        event.preventDefault();
+                    } else {
+                        header.style.height = null;
+                    }
                 }
             }
         }
