--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The band</title>
-    <link rel="icon"
-        href="https://w7.pngwing.com/pngs/62/631/png-transparent-yellow-star-computer-icons-favicon-avatar-music-yellow-star-icon-angle-triangle-website.png"
-        type="image/x-icon" />
+    <link rel="icon" href="https://w7.pngwing.com/pngs/62/631/png-transparent-yellow-star-computer-icons-favicon-avatar-music-yellow-star-icon-angle-triangle-website.png" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
@@ -60,25 +58,20 @@
                 <h2 class="section-heading">THE BAND</h2>
                 <p class="section-sub-heading">We love music</p>
                 <p class="about-text">
-                    We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.
+                    We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
                 <div class="row member-list">
-                    <div class="col col-third text-center">
+                    <div class="col col-third s-col-full mt-16 text-center">
                         <p class="member-name">Name</p>
                         <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
                     </div>
-                    <div class="col col-third text-center">
+                    <div class="col col-third s-col-full mt-16 text-center">
                         <p class="member-name">Name</p>
                         <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
                     </div>
-                    <div class="col col-third text-center">
+                    <div class="col col-third s-col-full mt-16 text-center">
                         <p class="member-name">Name</p>
                         <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
                     </div>
@@ -97,7 +90,7 @@
                     </ul>
                     <!-- Places -->
                     <div class="row places-list">
-                        <div class="col col-third">
+                        <div class="col col-third s-col-full mt-16">
                             <img src="/assets/img/places/place1.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
@@ -106,7 +99,7 @@
                                 <a href="#" class="btn">Buy Tickets</a>
                             </div>
                         </div>
-                        <div class="col col-third">
+                        <div class="col col-third s-col-full mt-16">
                             <img src="/assets/img/places/place2.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
@@ -115,7 +108,7 @@
                                 <a href="#" class="btn">Buy Tickets</a>
                             </div>
                         </div>
-                        <div class="col col-third">
+                        <div class="col col-third s-col-full mt-16">
                             <img src="/assets/img/places/place3.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
@@ -150,8 +143,7 @@
                             </div>
                             <div class="row mt-8">
                                 <div class="col col-full">
-                                    <input type="text" name="" placeholder="Message" required id=""
-                                        class="form-control">
+                                    <input type="text" name="" placeholder="Message" required id="" class="form-control">
                                 </div>
                             </div>
                             <input class="btn pull-right mt-16" type="submit" value="SEND">
@@ -181,7 +173,7 @@
         var header = document.getElementById('header');
         var mobileMenu = document.getElementById('mobile-menu');
         var headerHeight = header.clientHeight;
-        mobileMenu.onclick = function () {
+        mobileMenu.onclick = function() {
             // Đóng mở mobile menu
             var isClose = header.clientHeight === headerHeight;
             if (isClose) {
@@ -195,7 +187,7 @@
             for (var i = 0; i < menuItems.length; i++) {
                 var menuItem = menuItems[i];
 
-                menuItem.onclick = function () {
+                menuItem.onclick = function() {
                     var isParentMenu = this.nextElementSibling && this.nextElementSibling.classList.contains('subnav');
                     if (isParentMenu) {
                         event.preventDefault();
