--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The band</title>
-    <link rel="icon" href="https://w7.pngwing.com/pngs/62/631/png-transparent-yellow-star-computer-icons-favicon-avatar-music-yellow-star-icon-angle-triangle-website.png" type="image/x-icon" />
+    <title>Lê Công Hậu</title>
+    <link rel="icon" href="https://logopond.com/logos/910895e2f4c23bcafac2269f72c9d88b.png" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
@@ -48,7 +48,7 @@
         <div id="slider">
 
             <div class="text-content">
-                <h2 class="text-heading">Los Angeles</h2>
+                <h2 class="text-heading">New York</h2>
                 <div class="text-description">We had the best time playing at Venice Beach!</div>
             </div>
         </div>
@@ -128,8 +128,8 @@
                 <div class="row contact-content">
                     <div class="col col-half s-col-full contact-info">
                         <p><i class="ti-location-pin"></i>Chicago, US</p>
-                        <p><i class="ti-mobile"></i> Phone: <a href="tel:+00 151515">tel:+00 151515</a></p>
-                        <p><i class="ti-email"></i>Email: <a href="mailto:mail@mail.com">mailto:mail@mail.com</a></p>
+                        <p><i class="ti-mobile"></i> Phone: <a href="tel:+84 358500195">+84 358500195</a></p>
+                        <p><i class="ti-email"></i>Email: <a href="leconghau095@mail.com">leconghau095@mail.com</a></p>
                     </div>
                     <div class="col col-half s-col-full contact-form">
                         <form action="">
