--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div class="col col-half s-col-full contact-info">
                         <p><i class="ti-location-pin"></i>Chicago, US</p>
                         <p><i class="ti-mobile"></i> Phone: <a href="tel:+84 358500195">+84 358500195</a></p>
-                        <p><i class="ti-email"></i>Email: <a href="leconghau095@mail.com">leconghau095@mail.com</a></p>
+                        <p><i class="ti-email"></i>Email: <a href="mailto:leconghau095@gmail.com">leconghau095@mail.com</a></p>
                     </div>
                     <div class="col col-half s-col-full contact-form">
                         <form action="">
