fix bug img-places

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <!-- Places -->
                     <div class="row places-list">
                         <div class="col col-third s-col-full mt-16">
-                            <img src="/assets/img/places/place1.jpg" alt="New York" class="place-img">
+                            <img src="../img/places/place1.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt-16">
-                            <img src="/assets/img/places/place2.jpg" alt="New York" class="place-img">
+                            <img src="../img/places/place2.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 28 Nov 2016</p>
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt-16">
-                            <img src="/assets/img/places/place3.jpg" alt="New York" class="place-img">
+                            <img src="../img/places/place3.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 29 Nov 2016</p>
@@ -129,7 +129,7 @@
                     <div class="col col-half s-col-full contact-info">
                         <p><i class="ti-location-pin"></i>Chicago, US</p>
                         <p><i class="ti-mobile"></i> Phone: <a href="tel:+84 358500195">+84 358500195</a></p>
-                        <p><i class="ti-email"></i>Email: <a href="mailto:leconghau095@gmail.com">leconghau095@mail.com</a></p>
+                        <p><i class="ti-email"></i>Email: <a href="mailto:leconghau095@gmail.com">leconghau095@gmail.com</a></p>
                     </div>
                     <div class="col col-half s-col-full contact-form">
                         <form action="">
