--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <!-- Places -->
                     <div class="row places-list">
                         <div class="col col-third s-col-full mt-16">
-                            <img src="../img/places/place1.jpg" alt="New York" class="place-img">
+                            <img src="/assets/img/places/place1.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt-16">
-                            <img src="../img/places/place2.jpg" alt="New York" class="place-img">
+                            <img src="/assets/img/places/place2.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 28 Nov 2016</p>
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt-16">
-                            <img src="../img/places/place3.jpg" alt="New York" class="place-img">
+                            <img src="/assets/img/places/place3.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 29 Nov 2016</p>
