--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
                 <div class="row member-list">
                     <div class="col col-third s-col-full mt-32 text-center">
                         <p class="member-name">Name</p>
-                        <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
+                        <img src="./assets/img/band/member1.jpg" alt="Name" class="member-img">
                     </div>
                     <div class="col col-third s-col-full mt-32 text-center">
                         <p class="member-name">Name</p>
-                        <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
+                        <img src="./assets/img/band/member1.jpg" alt="Name" class="member-img">
                     </div>
                     <div class="col col-third s-col-full mt-32 text-center">
                         <p class="member-name">Name</p>
-                        <img src="/assets/img/band/member1.jpg" alt="Name" class="member-img">
+                        <img src="./assets/img/band/member1.jpg" alt="Name" class="member-img">
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                     <!-- Places -->
                     <div class="row places-list">
                         <div class="col col-third s-col-full mt-16">
-                            <img src="/assets/img/places/place1.jpg" alt="New York" class="place-img">
+                            <img src="./assets/img/places/place1.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt-16">
-                            <img src="/assets/img/places/place2.jpg" alt="New York" class="place-img">
+                            <img src="./assets/img/places/place2.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 28 Nov 2016</p>
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt-16">
-                            <img src="/assets/img/places/place3.jpg" alt="New York" class="place-img">
+                            <img src="./assets/img/places/place3.jpg" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 29 Nov 2016</p>
